# shut

./: .gitignore  Cargo.toml  README.md
src/: main.rs  shut.rs
