[package]
name = "shut"
version = "0.1.0"
edition = "2021"
authors = ["nuky <svenvowe@gmail.com>"]
description = "A small CLI tool to kill a process blocking a port."
keywords = ["shut", "system", "process", "port", "pid"]
categories = ["os", "tools", "cli"]
repository = "https://github.com/nuclearglow/shut"
readme = "README.md"
license = "MIT"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
exitcode = "1.1.2"
netstat2 = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
heim = {version = "0.1.0-rc.1", default-features = false, features = ["process"]}
