[package]
name = "shut"
version = "0.1.2"
edition = "2021"
authors = ["nuky <svenvowe@gmail.com>"]
description = "A minimal CLI tool to kill a process listening on a port."
keywords = ["cli", "system", "process", "port", "pid"]
categories = ["command-line-utilities"]
repository = "https://github.com/nuclearglow/shut"
readme = "README.md"
license = "MIT"
exclude = [
    ".vscode/*",
    ".gitignore"
]

[[bin]]
name = "shut"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.9.0"
exitcode = "1.1.2"
netstat2 = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
heim = {version = "0.1.0-rc.1", default-features = false, features = ["process"]}
